kubernetes/apps/snibox/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snibox
  namespace: apps
  labels:
    app: snibox
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 12h"
    keel.sh/approvals: "1"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: snibox
  template:
    metadata:
      labels:
        app: snibox
    spec:
      containers:
      - name: snibox
        image: melashri/snibox:latest
        ports:
        - containerPort: 3000
          name: http
        volumeMounts:
        - name: snibox-data
          mountPath: /app/db/database
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
      - name: snibox-data
        persistentVolumeClaim:
          claimName: snibox-pvc
