kubernetes/apps/snibox/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: snibox
  namespace: apps
spec:
  selector:
    app: snibox
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
