kubernetes/apps/snibox/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snibox
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: tinyauth-tinyauth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: snibox.taptappers.club
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: snibox
            port:
              number: 3000
  tls:
  - hosts:
    - snibox.taptappers.club
    secretName: snibox-tls-secret
